FIX: Alterando width para button mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -274,6 +274,7 @@
 
     .btn-info{
         margin: 20px auto;
+        width: 165px;
     }
 
     .skills-box{
